# eya_def

./: .gitignore  .pre-commit-config.yaml  IEC 61400-15-2 DEF.drawio  LICENSE  README.md
.github/workflows/: eya-def-tools-python-package.yml
eya_def_python_tools/: MANIFEST.in  README.md  pyproject.toml  requirements-dev.txt  requirements-erd.txt  requirements.txt  setup.cfg
eya_def_python_tools/doc_utils/: data_model_graphics.py
eya_def_python_tools/docs/: conf.py  index.rst
eya_def_python_tools/eya_def_tools/: __init__.py  data_model.py  enums.py  typing.py
eya_def_python_tools/eya_def_tools/doc_utils/: __init__.py  data_model_graphics.py
eya_def_python_tools/eya_def_tools/tests/: conftest.py  test_data_model.py  test_imports.py  test_schema_validation.py
eya_def_tools/: MANIFEST.in  README.md  pyproject.toml  requirements-dev.txt  requirements-erd.txt  requirements.txt
eya_def_tools/docs/: conf.py  index.rst
eya_def_tools/eya_def_tools/: __init__.py  constants.py  data_model.py  reporting_engine.py
eya_def_tools/eya_def_tools/data_models/: __init__.py  assessment_process_description.py  base_model.py  base_models.py  calculation_model_specification.py  dataset.py  energy_assessment.py  energy_uncertainty.py  energy_yield_assessment.py  enums.py  eya_def.py  eya_def_header.py  fields.py  general.py  general_metadata.py  generic_fields.py  iea43_wra_data_model.py  measurement_station.py  organisation.py  plant_performance.py  power_curve_schema.py  process_description.py  reference_met_data.py  reference_wind_farm.py  report_metadata.py  result.py  results.py  scenario.py  spatial.py  turbine_model.py  turbine_wind_resource_assessment.py  uncertainty.py  uncertainty_assessment.py  wind_farm.py  wind_resource.py  wind_resource_assessment.py  wind_uncertainty.py
eya_def_tools/eya_def_tools/io/: __init__.py  parser.py  writer.py
eya_def_tools/eya_def_tools/reporting/: __init__.py  reporting_engine.py
eya_def_tools/eya_def_tools/tests/: conftest.py  test_data_model.py  test_data_models.py  test_enums.py  test_imports.py  test_io.py  test_schema_validation.py
eya_def_tools/eya_def_tools/tests/data_models/: test_enums.py  test_eya_def.py  test_general.py  test_wind_uncertainty.py
eya_def_tools/eya_def_tools/tests/test_data_models/: test_dataset.py  test_eya_def.py  test_eya_def_header.py  test_general.py  test_plant_performance.py  test_wind_farm.py  test_wind_uncertainty.py
eya_def_tools/eya_def_tools/tests/test_reporting/: test_reporting_engine.py
eya_def_tools/eya_def_tools/tests/test_utils/test_doc_utils/: test_data_model_graphics.py
eya_def_tools/eya_def_tools/tests/utils/doc_utils/: test_data_model_graphics.py
eya_def_tools/eya_def_tools/utils/: __init__.py  json_schema_utils.py  json_utils.py  loading_utils.py  pydantic_json_schema_utils.py  reference_utils.py
eya_def_tools/eya_def_tools/utils/doc_utils/: __init__.py  data_model_graphics.py  eya_def_erdantic.py
json_schema/: iec_61400-15-2_eya_def.schema.json  iec_61400-15-2_reporting_def.schema.json  iec_61400-15-2_reporting_def_example.json
json_schema/examples/: iec_61400-15-2_eya_def_example_a.json  iec_61400-15-2_eya_def_example_a_ABC165-5.5MW.json  iec_61400-15-2_eya_def_example_a_PQR169-5.8MW.json  iec_61400-15-2_eya_def_example_a_XYZ-3.2_140.json  iec_61400-15-2_eya_def_example_a_iea43_wra.json  iec_61400-15-2_eya_def_example_a_iea43_wra_era5.json  iec_61400-15-2_eya_def_example_a_iea43_wra_mast.json  iec_61400-15-2_reporting_def_example_a.json
python_package/: README.md  pyproject.toml  requirements.txt  setup.cfg
python_package/docs/: conf.py  index.rst
python_package/eya_def_tools/: __init__.py  data_model.py  reporting_engine.py
python_package/eya_def_tools/tests/: conftest.py  test_data_model.py  test_imports.py  test_schema_validation.py
python_package/iec_eya_def_tools/: data_model.py
python_package/iec_eya_def_tools/tests/: conftest.py  test_data_model.py  test_data_model_examples.py  test_imports.py  test_schema_validation.py
