[build-system]
requires = ["setuptools>=69.0", "wheel>=0.43"]

[project]
name = "eya_def_tools"
version = "0.0.1a5"
authors = [
  {name="Christian Jonsson", email="christianj@naturalpower.com"},
  {name="Stephen Holleran", email="stephen@brightwindanalysis.com"},
  {name="Jason Fields", email="jason@empowr.io"},
  {name="Charlie Plumley", email="charlie.plumley@cubicoinvest.com"},
  {name="Alina Brenneke", email="alina.brenneke@rwe.com"},
]
description = "IEC 61400-15-2 Energy Yield Assessment (EYA) Digital Exchange Format (DEF) toolset"
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
]
dynamic = ["dependencies", "optional-dependencies"]

[tool.setuptools]
packages = ["eya_def_tools"]
include-package-data = true

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}
optional-dependencies.dev = {file = ["requirements-dev.txt"]}
optional-dependencies.erd = {file = ["requirements-erd.txt"]}

[tool.black]
color = true
target-version = ["py311"]

[tool.isort]
profile = "black"

[tool.flake8]
max_line_length = 88
max_complexity = 14
extend-ignore = "E203"

[tool.mypy]
files = ["eya_def_tools"]
plugins = [
    "pydantic.mypy",
]
python_version = "3.11"
follow_imports = "normal"
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_subclassing_any = true
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_untyped_decorators = true
ignore_missing_imports = false
no_implicit_reexport = true
show_error_codes = true
strict_optional = true
warn_redundant_casts = true
warn_unused_configs = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
module = [
    "erdantic.*",
    "pygraphviz.*",
]
ignore_missing_imports = true

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = false
warn_required_dynamic_aliases = true
warn_untyped_fields = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = [
    "--import-mode=importlib"]
markers = [
    "erdantic: tests requiring the 'erdantic' package (deselect with '-m \"not erdantic\"')",
]

[tool.coverage.run]
source = ["eya_def_tools"]
omit = ["eya_def_tools/tests/*"]
