[build-system]
requires = [
    "setuptools>=70.1",
    "wheel>=0.43",
]

[project]
name = "eya_def_tools"
version = "0.0.1a7"
authors = [
  {name="Christian Jonsson", email="christianj@kudosoftware.com"},
  {name="Stephen Holleran", email="stephen@brightwindanalysis.com"},
  {name="Jason Fields", email="jason.fields@res-group.com"},
  {name="Charlie Plumley", email="charlie.plumley@nuveenglobal.com>"},
  {name="Alina Brenneke", email="alina.brenneke@rwe.com"},
]
description = "IEC 61400-15-2 Wind Energy Yield Assessment (EYA) Digital Exchange Format (DEF) toolset"
readme = "README.md"
requires-python = ">=3.11"
keywords = [
    "Energy Yield Assessment",
    "EYA",
    "Wind Resource Assessment",
    "WRA",
    "Schema",
    "JSON Schema",
    "Data Model",
]
classifiers = [
    "Natural Language :: English",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
]
dynamic = ["dependencies", "optional-dependencies"]

[tool.setuptools]
packages = ["eya_def_tools"]
include-package-data = true

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}
optional-dependencies.dev = {file = ["requirements-dev.txt"]}
optional-dependencies.erd = {file = ["requirements-erd.txt"]}

[tool.black]
color = true
target-version = ["py312"]

[tool.isort]
profile = "black"
py_version=312

[tool.flake8]
extend-ignore = [
    "E203",  # Incompatible with black
    "PT016",  # Incompatible with latest pytest API
]
max_line_length = 88
max_complexity = 14
require-plugins = ["flake8-pytest-style"]

[tool.mypy]
files = ["eya_def_tools"]
plugins = ["pydantic.mypy"]
python_version = "3.12"
follow_imports = "normal"
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_subclassing_any = true
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_untyped_decorators = true
ignore_missing_imports = false
no_implicit_reexport = true
show_error_codes = true
strict_optional = true
warn_redundant_casts = true
warn_unused_configs = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
module = ["pygraphviz.*"]
ignore_missing_imports = true

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = false
warn_required_dynamic_aliases = true
warn_untyped_fields = true

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
    "--cov=eya_def_tools",
    "--cov-report=html",
    "--cov-report=xml",
    "--cov-report=term-missing",
]
markers = [
    "erdantic: tests requiring the 'erdantic' package (deselect with '-m \"not erdantic\"')",
]

[tool.coverage.run]
source = ["eya_def_tools"]
omit = ["eya_def_tools/tests/*"]
