[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "iec_eya_def_tools"
version = "0.0.1a1"
authors = [
  {name="M. Jason Fields", email="michael.fields@nrel.gov"},
  {name="Andrew Henderson", email="arh@cop.dk"},
  {name="Mark Stoelinga", email="mark.stoelinga@arcvera.com"},
  {name="Stephen Holleran", email="stephen@brightwindanalysis.com"},
  {name="Thomas van Delft", email="thomas.vandelft@dnv.com"},
  {name="Tassia Penha", email="tassia.penha@apexcleanenergy.com"},
  {name="Charlie Plumley", email="charlie.plumley@cubicoinvest.com"},
  {name="Bjarke Tobias Olsen", email="btol@dtu.dk"},
  {name="Christian Jonsson", email="christianj@naturalpower.com"},
]
description = "IEC 61400-15-2 Reporting Digital Exchange Format (DEF) toolset"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dynamic = ["dependencies"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}
